--- a/views/dialogue/dialogueChat.ejs
+++ b/views/dialogue/dialogueChat.ejs
@@ -1,24 +1,41 @@
 <!-- header -->
-<%-include ("../partials/header-persona.ejs")%>
-<%-include ("../partials/emptybackbar.ejs") %>
+<%-include ("../partials/header-internal.ejs")%>
 
-<h1>This is the dialogue generator</h1>
+<h1>This is the chat.</h1>
 
-<div class="container" id="chatContainer" id="chatContainer">
+<div class="container-fluid mb-5 pb-5" id="chatContainer">
   <!-- Existing chat messages -->
-  <div class="row">
+  <div class="row-fluid">
     <% for (var i=0; i<innerDialogueHistory.length; i++) { %>
-    <div class="col-12" id="userInput">
-      <%- "User:" + "&nbsp;" + innerDialogueHistory[i].userPrompt %>
+    <div class="col-12 my-2" id="userInput">
+      <div class="card bg-primary text-bg-light">
+        <div class="card-body m-3">
+          <div class="card-title">You:</div>
+          <div class="card-text"><%- innerDialogueHistory[i].userPrompt %>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="col-12" id="botOutput">
-      <%- "Bot:" + "&nbsp;" + innerDialogueHistory[i].botResponse %>
-    </div>
+    <!-- <form action="/dialogue/chat/inner-dialogue" method="post"> -->
+      <div class="col-12" id="botOutput">
+        <div class="card">
+          <!-- save persona button -->
+          <!-- <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save" -->
+          <!-- </button> -->
+          <div class="card-body m-3">
+            <div class="card-title">Persona:</div>
+            <div class="card-text" name="data"><%- innerDialogueHistory[i].botResponse %>
+            </div>
+          </div>
+        </div>
+      </div>
+    <!-- </form> -->
+    <hr>
     <% } %>
   </div>
 </div>
 
-<form action="/dialogue/chat" method="post" class="text-center input-container">
+<form action="/dialogue/chat/inner-dialogue" method="post" class="text-center input-container">
   <div class="row">
     <input class="form-control col" rows="1" cols="1" type="text" name="prompt" placeholder="<%= placeholderText %>" />
     <button class="btn col-3" type="submit">Send</button>
