implemented the user persona chat

--- a/views/dialogue/innerDialogue.ejs
+++ b/views/dialogue/innerDialogue.ejs
@@ -14,7 +14,7 @@
 <!-- content -->
 <div class="container-fluid" style="padding-top: 150px;">
     <div class="row">
-        <form action="/dialogue/chat" method="post" class="text-center">
+        <form action="/dialogue/chat/inner-dialogue" method="post" class="text-center">
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body">
@@ -28,7 +28,7 @@
                 <div class="card text-center">
                     <div class="card-body">
                         <label class="card-title">What situation is the persona faced with?</label><br />
-                        <input class="form-control" type="text" name="name"
+                        <input class="form-control" type="text" name="situation"
                             placeholder="Enter the situation your persona is in" />
                     </div>
                 </div>
@@ -37,7 +37,7 @@
                 <div class="card text-center">
                     <div class="card-body">
                         <label class="card-title">What kind of setting are they in?</label><br />
-                        <input class="form-control" type="text" name="name"
+                        <input class="form-control" type="text" name="plot"
                             placeholder="Enter the plot/setting your persona is in" />
                     </div>
                 </div>
