--- a/views/dialogue/userPersona.ejs
+++ b/views/dialogue/userPersona.ejs
@@ -14,7 +14,7 @@
 <!-- content -->
 <div class="container-fluid" style="padding-top: 150px;">
     <div class="row">
-        <form action="/dialogue/chat" method="post" class="text-center">
+        <form action="/dialogue/chat/user-persona-chat" method="post" class="text-center">
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body">
