Reformat code for better flow and look

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -9,7 +9,7 @@
         <a href="/saved">
           <img
             src="../images/icons/saved.png"
-            alt="saved"
+            alt=""
             width="30px"
             height="30px"
           />
@@ -22,7 +22,7 @@
         <a href="/persona">
           <img
             src="../images/icons/persona.png"
-            alt="saved"
+            alt=""
             width="30px"
             height="30px"
           />
@@ -35,7 +35,7 @@
         <a href="/home">
           <img
             src="../images/icons/home.png"
-            alt="saved"
+            alt="home"
             width="50px"
             height="50px"
             id="home"
@@ -49,7 +49,7 @@
         <a href="/dialogue">
           <img
             src="../images/icons/dialogue.png"
-            alt="saved"
+            alt=""
             width="30px"
             height="30px"
           />
@@ -62,7 +62,7 @@
         <a href="/profile">
           <img
             src="../images/icons/profile.png"
-            alt="saved"
+            alt=""
             width="30px"
             height="30px"
           />
