--- a/views/persona/persona.ejs
+++ b/views/persona/persona.ejs
@@ -4,10 +4,10 @@
 <!-- content -->
 
   <div class="container p-5 mt-2">
-    <div class="row text-center">
+    <div class="row">
     <% for (var i=0; i<locals.personaLinks.length; i++) { %>
-      <div class="col-12 mb-3">
-      <a class=" btn btn-secondary" style="width: 400px; height:180px;"
+      <div class="col-12 mb-3 text-center">
+      <a class=" btn btn-secondary" style="height:180px;"
       href="<%- locals.personaLinks[i].link %>">
         <h2 class="pt-5"><b><%- locals.personaLinks[i].name %></b></h2></a>
       </div>
