Add links to redirect to

--- a/views/saved/saved.ejs
+++ b/views/saved/saved.ejs
@@ -5,20 +5,29 @@
 <!-- back title bar -->
 <%-include ('../partials/emptybackbar.ejs')%>
 <div class="col text-center">
-    <h1>Saved</h1>
-    </div>
+  <h1>Saved</h1>
+</div>
 </div>
 
 <div class="container p-5 my-5">
-    <div class="row">
-    <div class="card col btn p-5" id="title">Persona</div>
-    </div> <br><br>
-    <div class="row">
-    <div class="card col btn p-5" id="title">Dialogue</div>
-    </div> <br><br>    
-    <div class="row">
-    <div class="card col btn p-5" id="title">Prompt</div>
-    </div>
+  <div class="row">
+    <a href="/persona">
+      <div class="card col btn p-5" id="title">Persona
+      </div>
+    </a>
+  </div> <br><br>
+  <div class="row">
+    <a href="/dialogue">
+      <div class="card col btn p-5" id="title">Dialogue
+      </div>
+    </a>
+  </div> <br><br>
+  <div class="row">
+    <a href="/persona/saved-prompt">
+      <div class="card col btn p-5" id="title">Prompt
+      </div>
+    </a>
+  </div>
 </div>
 
 
