added headers in dialogue ejs pages

--- a/views/dialogue/dialogueChat.ejs
+++ b/views/dialogue/dialogueChat.ejs
@@ -1,5 +1,6 @@
 <!-- header -->
-<%-include ("../partials/header-internal.ejs")%>
+<%-include ("../partials/header-dialogue.ejs")%>
+<%- include ("../partials/emptybackbar.ejs") %>
 
 <div class="container-fluid mb-5 pb-5" id="chatContainer">
   <!-- Existing chat messages -->
