--- a/views/dialogue/dialogueFilters.ejs
+++ b/views/dialogue/dialogueFilters.ejs
@@ -1,5 +1,6 @@
 <!-- navbar and footer -->
-<%-include ("../partials/header.ejs")%>
+<%-include ("../partials/header-dialogue.ejs")%>
+<%- include ("../partials/emptybackbar.ejs") %>
 
 <h1>This is the dialogue filters</h1>
 <form action="/dialogueFilters" method="POST"></form>
