Refactor to refer google icon instead image home

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -7,12 +7,9 @@
       <!-- save  -->
       <div class="icon col pt-3">
         <a href="/saved">
-          <img
-            src="../images/icons/saved.png"
-            alt=""
-            width="30px"
-            height="30px"
-          />
+          <span class="material-symbols-rounded">
+            collections_bookmark
+            </span>
           <p>Saved</p>
         </a>
       </div>
@@ -20,12 +17,9 @@
       <!-- persona -->
       <div class="icon col pt-3">
         <a href="/persona">
-          <img
-            src="../images/icons/persona.png"
-            alt=""
-            width="30px"
-            height="30px"
-          />
+          <span class="material-symbols-rounded">
+            border_color
+            </span>
           <p>Persona</p>
         </a>
       </div>
@@ -47,12 +41,9 @@
       <!-- dialogue -->
       <div class="icon col pt-3">
         <a href="/dialogue">
-          <img
-            src="../images/icons/dialogue.png"
-            alt=""
-            width="30px"
-            height="30px"
-          />
+          <span class="material-symbols-rounded">
+            forum
+            </span>
           <p>Dialogue</p>
         </a>
       </div>
@@ -60,12 +51,9 @@
       <!-- profile -->
       <div class="icon col pt-3">
         <a href="/profile">
-          <img
-            src="../images/icons/profile.png"
-            alt=""
-            width="30px"
-            height="30px"
-          />
+          <span class="material-symbols-rounded">
+            account_circle
+            </span>
           <p>Profile</p>
         </a>
       </div>
