--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
       <% for (var i=1; i < locals.navLinks.length; i++) { %>
         <div class="col-6 px-2 py-2">
           <a class="btn btn-outline-secondary-lg" href="<%- locals.navLinks[i].link %>">
-            <img src="<%-locals.navLinks[i].icon%>" style="opacity: 70%;" class="pt-2 pb-1" alt="">
+            <span class= "material-symbols-rounded pt-2 pb-1" style="opacity: 70%;"> <%-locals.navLinks[i].icon%></span>
               <p class="card-title" id="card-name"><%- locals.navLinks[i].upperName %></p>
               <p class="card-text" style="font-size: 9pt; width:150px; height: 80px;"><%- locals.navLinks[i].description %></p>
           </a><br><br>
