--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -28,16 +28,13 @@
       <div class="container px-3">
 
         <!-- Account Settings -->
-        <div class="card p-3 bg-secondary btn">
+        <div class="card p-3 bg-light btn">
           <a href="/profile/account-settings">
             <div class="row ">
               <div class="col-2">
-                <img
-                  src="../images/icons/Setting.png"
-                  width="20px"
-                  height="20px"
-                  alt=""
-                />
+                <span class="material-symbols-rounded">
+                  settings
+                  </span>
               </div>
               <div class="col" id="menubtn">Account Settings</div>
             </div>
@@ -46,16 +43,13 @@
         <br />
 
         <!-- Filters -->
-        <div class="card p-3 bg-secondary btn">
+        <div class="card p-3 bg-light btn">
           <a href="/filters">
             <div class="row">
               <div class="col-2">
-                <img
-                  src="../images/icons/filter.png"
-                  width="20px"
-                  height="20px"
-                  alt=""
-                />
+                <span class="material-symbols-rounded">
+                  tune
+                  </span>
               </div>
               <div class="col" id="menubtn">Filters</div>
             </div>
@@ -64,16 +58,13 @@
         <br />
 
         <!-- Saved Persona -->
-        <div class="card p-3 bg-secondary btn" >
+        <div class="card p-3 bg-light btn" >
           <a href="/saved/persona">
             <div class="row">
               <div class="col-2">
-                <img
-                  src="../images/icons/Savedpersona.png"
-                  width="20px"
-                  height="20px"
-                  alt=""
-                />
+                <span class="material-symbols-rounded">
+                  person
+                  </span>
               </div>
               <div class="col"id="menubtn">Saved Persona</div>
             </div>
@@ -82,16 +73,13 @@
         <br />
 
         <!-- Saved Dialogue -->
-        <div class="card p-3 bg-secondary btn" >
+        <div class="card p-3 bg-light btn" >
           <a href="/saved/dialogue">
             <div class="row">
               <div class="col-2">
-                <img
-                  src="../images/icons/Saveddialogue.png"
-                  width="20px"
-                  height="20px"
-                  alt=""
-                />
+                <span class="material-symbols-rounded">
+                  chat
+                  </span>
               </div>
               <div class="col"id="menubtn">Saved Dialogue</div>
             </div>
@@ -100,16 +88,13 @@
         <br />
 
         <!-- About Us -->
-        <div class="card p-3 bg-secondary btn" >
+        <div class="card p-3 bg-light btn" >
           <a href="/about-us">
             <div class="row">
               <div class="col-2">
-                <img
-                  src="../images/icons/AboutUs.png"
-                  width="20px"
-                  height="20px"
-                  alt=""
-                />
+                <span class="material-symbols-rounded">
+                  info
+                  </span>
               </div>
               <div class="col" id="menubtn">About Us</div>
             </div>
@@ -118,16 +103,13 @@
         <br />
 
         <!-- FAQ -->
-        <div class="card p-3 bg-secondary btn" >
+        <div class="card p-3 bg-light btn" >
           <a href="/faq">
             <div class="row">
               <div class="col-2">
-                <img
-                  src="../images/icons/FAQ.png"
-                  width="20px"
-                  height="20px"
-                  alt=""
-                />
+                <span class="material-symbols-rounded">
+                  help
+                  </span>
               </div>
               <div class="col" id="menubtn">FAQ</div>
             </div>
@@ -140,7 +122,7 @@
         <div class="text-center ">
           <button
             type="button"
-            class="btn"
+            class="btn bg-light btn-lg"
             onclick="window.location.href='/logout'"
           >
             LOGOUT
