Remove images and relocate home image for nav bar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -28,7 +28,7 @@
       <div class="icon col py-3">
         <a href="/home">
           <img
-            src="../images/icons/home.png"
+            src="../images/invsona/home.png"
             alt="home"
             width="50px"
             height="50px"
