--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -7,19 +7,17 @@
         <div class="pb-4 pt-5">
           <form action="upload.png" method="post" enctype="multipart/form-data">
             <label for="fileToUpload">
-              <div
-                class="editUserImage"
+              <div class="editUserImage"
                 style="background-image: url('../images/cats/cat_placeholder.png')"
               >
-  
-                <span>Edit Profile Picture</span>
-                <div style="position: relative">
-                  <img src="../images/icons/edit.png" class="editicon" alt="">
-                </div>
+                <span> 
+                  <span class="material-symbols-rounded">edit</span>
+                  Edit Profile Picture</span>
               </div>
             </label>
             <input type="File" name="fileToUpload" id="fileToUpload">
           </form>
+          <span class="material-symbols-rounded editicon">edit</span>
         </div>
       </div>
 
@@ -122,7 +120,7 @@
         <div class="text-center ">
           <button
             type="button"
-            class="btn bg-light btn-lg"
+            class="btn bg-light "
             onclick="window.location.href='/logout'"
           >
             LOGOUT
