added event listener to the dark mode toggle

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,6 @@
 <!-- Purpose: Landing page for Invsona -->
-
 <!-- header -->
-<%-include ('./partials/header-internal.ejs')%>
+<%-include ('./partials/header.ejs')%>
 
 <!-- video background -->
 <video autoplay muted loop id="background">
