Applied dark mode nav bar

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,5 @@
 <div
-  class="container-fluid text-center fixed-bottom"
-  id="botnav"
+  class="botnav container-fluid text-center fixed-bottom"
 >
   <div class="row">
     <div class="navbar">
