--- a/styles/navbar.css
+++ b/styles/navbar.css
@@ -1,9 +1,9 @@
-#botnav {
+.botnav {
   font-size: 10px;
   font-family: "Gugi", sans-serif;
-  background-color: white; /*#051726*/
   font-weight: bolder;
   text-decoration: none;
+  background-color: white;
   /* border: 1px solid black; */
   filter: drop-shadow(0px 5px 10px #81ffd9);
 }
@@ -13,7 +13,7 @@
 }
 
 .icon {  
-  color: white;
+  color: white;;
 }
 
 
