--- a/views/partials/emptybackbar.ejs
+++ b/views/partials/emptybackbar.ejs
@@ -1,5 +1,5 @@
 <!-- back button  -->
-<div class="container-fluid align-self-center fixed-top">
+<div class="container-fluid align-self-center sticky-top">
   <div class="row text-bg-light pt-5 pb-4 px-3">
     <div class="col-1">
       <a onclick="history.back()">
