--- a/views/partials/emptybackbar.ejs
+++ b/views/partials/emptybackbar.ejs
@@ -1,6 +1,6 @@
 <!-- back button  -->
 <div class="container-fluid align-self-center sticky-top">
-  <div class="row text-bg-light pt-5 pb-4 px-3">
+  <div class="backnav row text-bg-light pt-5 pb-4 px-3">
     <div class="col-1">
       <a onclick="history.back()">
         <span class="material-symbols-rounded">
