--- a/views/dialogue/dialogueHome.ejs
+++ b/views/dialogue/dialogueHome.ejs
@@ -13,7 +13,7 @@
     <div>
         <% for (var i=0; i<locals.dialogueLinks.length; i++) { %>
         <div class="row">
-            <a class="py-5 btn btn-secondary"
+            <a class="py-5 card btn btn-light"
                 href="<%- locals.dialogueLinks[i].link %>"><%- locals.dialogueLinks[i].name %></a>
         </div>
         <br>
