--- a/views/persona/persona.ejs
+++ b/views/persona/persona.ejs
@@ -7,7 +7,7 @@
     <div class="row">
     <% for (var i=0; i<locals.personaLinks.length; i++) { %>
       <div class="col-12 mb-3 text-center">
-      <a class=" btn btn-secondary" style="height:180px;"
+      <a class="card btn-light" style="height:150px; width: 300px;"
       href="<%- locals.personaLinks[i].link %>">
         <h2 class="pt-5"><b><%- locals.personaLinks[i].name %></b></h2></a>
       </div>
