Fixed minor issues in front end

--- a/views/dialogue/dialogueHome.ejs
+++ b/views/dialogue/dialogueHome.ejs
@@ -9,7 +9,7 @@
 </div>
 
 <!-- content -->
-<div class="container-fluid" style="padding-top: 200px;">
+<div class="container-fluid px-5" style="padding-top: 180px;">
     <div>
         <% for (var i=0; i<locals.dialogueLinks.length; i++) { %>
         <div class="row">
