--- a/views/error/404.ejs
+++ b/views/error/404.ejs
@@ -6,7 +6,7 @@
 <!-- video background -->
 <div class="bg">
 <video autoplay muted loop id="background" >
-  <source src="./images/blue_bg.mp4" type="video/mp4" />
+  <source src="../images/blue_bg.mp4" type="video/mp4" />
 </video>
 </div>
 <!-- logo -->
