--- a/views/persona/generalPrompt.ejs
+++ b/views/persona/generalPrompt.ejs
@@ -11,8 +11,9 @@
 </div>
 
 <!-- content -->
-<div class="container-fluid" style="padding-top: 150px;">
-  <div class="row">
+<div class="container-fluid px-3 mt-2">
+  <div class="card pb-3">
+    <div class="row">
     <form action="/persona/chat/general" method="post" class="text-center">
       <div class="col-12">
         <div class="card text-center">
@@ -46,9 +47,9 @@
           </div>
         </div>
       </div>
-      <br />
-      <button class="btn" type="submit">Send</button>
+      <button class="btn p-2 mt-3" type="submit">Send</button>
     </form>
+    </div>
   </div>
 </div>
 
