--- a/views/persona/persona.ejs
+++ b/views/persona/persona.ejs
@@ -3,11 +3,11 @@
 
 <!-- content -->
 
-  <div class="container p-5 mt-2">
+  <div class="container-fluid px-5 mt-4">
     <div class="row">
     <% for (var i=0; i<locals.personaLinks.length; i++) { %>
-      <div class="col-12 mb-3 text-center">
-      <a class="card btn-light" style="height:150px; width: 300px;"
+      <div class="col mb-3 align-item-center text-center">
+      <a class="card btn btn-light" style="height:150px; width: 300px;"
       href="<%- locals.personaLinks[i].link %>">
         <h2 class="pt-5"><b><%- locals.personaLinks[i].name %></b></h2></a>
       </div>
