--- a/views/persona/persona.ejs
+++ b/views/persona/persona.ejs
@@ -3,18 +3,18 @@
 
 <!-- content -->
 
-  <div class="container-fluid px-5 mt-4">
-    <div class="row">
-    <% for (var i=0; i<locals.personaLinks.length; i++) { %>
-      <div class="col mb-3 align-item-center text-center">
-      <a class="card btn btn-light" style="height:150px; width: 300px;"
+  <div class="container-fluid  px-5 mt-4" style="padding-top: 80px;">
+    <div>
+      <% for (var i=0; i<locals.personaLinks.length; i++) { %>
+      <div class="row">
+      <a class="card btn btn-light"
       href="<%- locals.personaLinks[i].link %>">
-        <h2 class="pt-5"><b><%- locals.personaLinks[i].name %></b></h2></a>
+        <h5 class="p-4"><%- locals.personaLinks[i].name %></h5></a>
       </div>
+      <br>
         <% } %>
       </div>
   </div>
-
 
 <!-- footer and navbar -->
 <%-include ("../partials/navbar.ejs")%>
