--- a/views/saved/saved-persona.ejs
+++ b/views/saved/saved-persona.ejs
@@ -5,7 +5,11 @@
 <!-- back title bar -->
 <%-include ('../partials/emptybackbar.ejs')%>
 <div class="col text-center">
-  <h1>SAVED PERSONA</h1>
+  <h1 class="align-middle">SAVED PERSONA</h1>
+  <form id="savePDF" action="/saved/persona/save-as-pdf" method="post">
+    <input id=savePDFInput type="hidden" name="personaList" value="" />
+    <button class="btn btn-sm position-absolute top-50 end-0 translate-middle material-icons" id="savePDFButton">picture_as_pdf</button>
+  </form>
 </div>
 </div>
 </div>
@@ -13,35 +17,52 @@
 <div class="container mt-5" style="padding-bottom: 100px; padding-top: 100px;">
   <div class="accordion accordion-flush" id="accordionFlushExample">
     <% for (var i=0; i<savedPersona.length; i++) { %>
-    <input class="form-check-input position-absolute start-0 mx-5 p-3" type="checkbox" value="<%- savedPersona[i].persona %>" id="flexCheckDefault" name="persona">
     <div class="accordion-item">
       <h2 class="accordion-header">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapse<%- [i] %>" aria-expanded="false" aria-controls="flush-collapse<%- [i] %>">
-          <%- savedPersona[i].date %>
+          <div class="form-check form-switch text-center">
+            <input class="form-check-input personaCheckbox" type="checkbox" id="<%- savedPersona[i].persona %>">
+            <p class="card-title"><%- savedPersona[i].date %></p>
+          </div>
         </button>
       </h2>
       <div id="flush-collapse<%- [i] %>" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-        <form action="/persona/saved-persona/dialogue-filters" method="post">
-          <input type="hidden" name="persona" value="<%- savedPersona[i].persona %>" />
-          <button class="btn position-absolute top-1 end-0 m-3" type="submit"><img src="../images/icons/dialogue.png"></button>
-        </form>
         <div class="accordion-body">
-          <p class="card-text"><%- savedPersona[i].persona %></p>
-          <!-- <form action="/persona/chat" method="post"></form>
-          <e% for (var j=0; j<savedPersona[i].parameterSet.length; j++) { %>
-          <div class="mb-3">
-            <label class="card-title"><e%- savedPromptParameter[i].parameterSet[j] %></label><br>
-            <input class="form-control" type="text" name="<e%- savedPromptParameter[i].parameterSet[j] %>" placeholder="Enter <e%- savedPersona[i].parameterSet[j] %>" />
-          </div>
-          <e% } %>
-          <button class="btn" type="submit">Send</button>
-          </form> -->
+          <form action="/persona/saved-persona/dialogue-filters" method="post">
+            <input type="hidden" name="persona" value="<%- savedPersona[i].persona %>" />
+            <button class="btn btn-sm position-absolute top-1 end-0 mx-3" type="submit"><img src="../images/icons/dialogue.png"></button>
+          </form>
+          <p class="card-text my-5"><%- savedPersona[i].persona %></p>
         </div>
       </div>
     </div>
     <% } %>
   </div>
 </div>
+
+<script>
+  $(document).ready(function() {
+    let personaList = []
+
+    // Add event listener to the checkboxes
+    $('.personaCheckbox').on('click', async (event) => {
+      console.log("checked")
+      if (event.target.checked) {
+        personaList.push(event.target.id)
+      } else {
+        personaList.pop(event.target.id)
+      }
+      console.log(personaList)
+      if (personaList.length === 0) {
+        $('#savePDFButton').attr('disabled', true)
+      } else {
+        $('#savePDFButton').attr('disabled', false)
+        $('#savePDFInput').val(personaList) // Set the value of the hidden input to the personaList array
+        console.log("test", $('#savePDFInput').val())
+      }
+    })
+  })
+</script>
 
 
 <!-- navbar and footer -->
