--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,9 +7,13 @@
 <div class="invsona-bg">
   <div class="container text-center align-item-center p-2 pt-1">
     <div class="p-3 mt-4">
-      <img src="../images/cats/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />   
+      <% if (profileImage) { %>
+        <img src="data:<%= profileImage.contentType %>;base64,<%= profileImage.data.toString('base64') %>" id="userImage" alt="userImage" class="p-2" />
+      <% } else { %>
+        <img src="../images/cats/cat_placeholder.png" id="userImage" alt="userImage" class="p-2" />
+      <% } %>
     </div>
-    <h1 id="display-name"><%-name%></h1>
+    <h1 id="display-name"><%- name %></h1>
   </div>
 
   <!-- cards -->  
