--- a/views/dialogue/personaToPersonaChat.ejs
+++ b/views/dialogue/personaToPersonaChat.ejs
@@ -9,23 +9,29 @@
             <div class="card bg-primary text-bg-light">
                 <div class="card-body m-3">
                     <div class="card-title"></div>
-                    <div class="card-text"><.%- PersonaPersonaChatHistory[i].userPrompt %>
+                    <div class="card-text">
+                        <.%- PersonaPersonaChatHistory[i].userPrompt %>
                     </div>
-            </div>
-        </div>
-    </div>
-    <div class="col-12" id="botOutput">
-        <div class="card">
-            <div class="card-body m-3">
-                <div class="card-title">Persona:</div>
-                <div class="card-text" name="data"><%- PersonaPersonaChatHistory[i].botResponse %>
                 </div>
             </div>
         </div>
+        <div class="col-12" id="botOutput">
+            <div class="card">
+                <!-- save button -->
+                <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit"
+                    name="save" value="<%- i %>">
+                    star_border
+                </button>
+                <div class="card-body m-3">
+                    <div class="card-title">Persona:</div>
+                    <div class="card-text" name="data"><%- PersonaPersonaChatHistory[i].botResponse %>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <% } %>
     </div>
-    <hr>
-    <% } %>
-</div>
 </div>
 
 <form action="/dialogue/chat/persona-to-persona-chat" method="post" class="text-center input-container">
