changed the chat displays for dialogue

--- a/views/dialogue/personaChat.ejs
+++ b/views/dialogue/personaChat.ejs
@@ -14,20 +14,21 @@
             </div>
         </div>
     </div>
-    <div class="col-12" id="botOutput">
-        <div class="card">
-            <!-- save button -->
-            <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit"
-                name="save" value="<%- i %>">
-                star_border
-            </button>
-            <div class="card-body m-3">
-                <div class="card-title">Persona:</div>
-                <div class="card-text" name="data"><%- userPersonaChatHistory[i].botResponse %>
+    <form action="/dialogue/chat/user-persona/save" method="post">
+        <div class="col-12" id="botOutput">
+            <div class="card">
+                <!-- save button -->
+                <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit"
+                    name="save" value="<%- i %>">
+                    star_border
+                </button>
+                <div class="card-body m-3">
+                    <div class="card-text" name="data">Persona: <%= persona %></div>
+                    <div class="card-text" name="data"><%- userPersonaChatHistory[i].botResponse %></div>
                 </div>
             </div>
         </div>
-    </div>
+    </form>
     <hr>
     <% } %>
 </div>
