--- a/views/dialogue/dialogueChat.ejs
+++ b/views/dialogue/dialogueChat.ejs
@@ -5,33 +5,25 @@
   <!-- Existing chat messages -->
   <div class="row-fluid">
     <% for (var i=0; i<innerDialogueHistory.length; i++) { %>
-    <!-- <div class="col-12 my-2" id="userInput"> -->
-      <!-- <div class="card bg-primary text-bg-light"> -->
-        <!-- <div class="card-body m-3"> -->
-          <!-- <div class="card-title">You:</div> -->
-          <!-- <div class="card-text"><x%- innerDialogueHistory[i].userPrompt %> -->
-          <!-- </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- <form action="/dialogue/chat/inner-dialogue" method="post"> -->
+    <form action="/dialogue/chat/inner-dialogue/save" method="post">
       <div class="col-12" id="botOutput">
         <div class="card">
-              <!-- save button -->
-              <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save" value="<%- i %>">
-                star_border
-              </button>
+          <!-- save button -->
+          <button class="material-icons position-absolute top-0 end-0 m-3 clickable save-icon" type="submit" name="save"
+            value="<%- i %>">
+            star_border
+          </button>
           <div class="card-body m-3">
-            <div class="card-title">Persona:</div>
-            <div class="card-text" name="data"><%- innerDialogueHistory[i].botResponse %>
-            </div>
+            <div class="card-text" name="data">Persona: <%= persona %></div>
+            <div class="card-text" name="data"><%- innerDialogueHistory[i].botResponse %></div>
           </div>
         </div>
       </div>
-    <!-- </form> -->
-    <hr>
-    <% } %>
   </div>
+  </form>
+  <hr>
+  <% } %>
+</div>
 </div>
 
 <form action="/dialogue/chat/inner-dialogue" method="post" class="text-center input-container">
