fixed a minor bug

--- a/views/dialogue/dialogueChat.ejs
+++ b/views/dialogue/dialogueChat.ejs
@@ -14,7 +14,7 @@
             star_border
           </button>
           <div class="card-body m-3">
-            <div class="card-text" name="data">Persona: <%= persona %></div>
+            <!-- <div class="card-text" name="data">Persona: <x%= persona %></div> -->
             <div class="card-text" name="data"><%- innerDialogueHistory[i].botResponse %></div>
           </div>
         </div>
