--- a/views/dialogue/personaChat.ejs
+++ b/views/dialogue/personaChat.ejs
@@ -23,7 +23,7 @@
                     star_border
                 </button>
                 <div class="card-body m-3">
-                    <div class="card-text" name="data">Persona: <%= persona %></div>
+                    <!-- <div class="card-text" name="data">Persona: <.%= persona %></div> -->
                     <div class="card-text" name="data"><%- userPersonaChatHistory[i].botResponse %></div>
                 </div>
             </div>
