--- a/views/dialogue/personaToPersona.ejs
+++ b/views/dialogue/personaToPersona.ejs
@@ -37,21 +37,12 @@
             <div class="col-12">
                 <div class="card text-center">
                     <div class="card-body">
-                        <label class="card-title">What kind of setting are they in?</label><br />
-                        <input class="form-control" type="text" name="setting"
+                        <label class="card-title">What kind of situation are they in?</label><br />
+                        <input class="form-control" type="text" name="situation"
                             placeholder="Enter the setting the personas are in" />
                     </div>
                 </div>
             </div>
-            <!-- <div class="col-12">
-                <div class="card text-center">
-                    <div class="card-body">
-                        <label class="card-title">What kind of plot are they in?</label><br />
-                        <input class="form-control" type="text" name="plot"
-                            placeholder="Enter the plot the personas are in" />
-                    </div>
-                </div>
-            </div> -->
             <br />
             <button class="btn" type="submit">Send</button>
         </form>
