--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -6,7 +6,7 @@
   <div class="row-fluid">
     <% for (var i=0; i<personaHistory.length; i++) { %>
     <div class="col-12 my-2" id="userInput">
-      <div class="card bg-primary text-bg-light">
+      <div class="card bg-primary text-light">
         <div class="card-body m-3">
           <div class="card-title">User:</div>
           <div class="card-text"><%- personaHistory[i].userPrompt %>
