--- a/views/persona/newPrompt.ejs
+++ b/views/persona/newPrompt.ejs
@@ -11,7 +11,7 @@
 
 <!-- content -->
 
-<div class="container-fluid" style="padding-top: 200px;">
+<div class="container-fluid text-center" style="padding-top: 200px;">
   <form action="/persona/new-prompt" method="post">
     <div class="row">
       <input class="form-control col mx-3" type="text" name="parameter" placeholder="Add a parameter" />
@@ -24,9 +24,9 @@
     <input id="deleteIndex" type="hidden" name="index" value="" />
   </form>
 
-  <form action="/persona/chat" method="post" class="text-center">
+  <form action="/persona/chat/preset-prompt" method="post" class="text-center">
     <div class="row">
-      <% for (var i=0; i<newParameter.length; i++) { %>
+      <% for (var i=0; i < newParameter.length; i++) { %>
       <div class="col-12">
         <div class="card text-center">
           <div class="card-body">
@@ -39,13 +39,12 @@
       <% } %>
     </div>
     <br>
-    <button class="btn" type="submit" name="action" value="Edit">Send</button>
-    <!-- Button trigger modal -->
-    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#saveParameterModal">
-      Save Parameter Set
-    </button>
-
+    <button class="btn" type="submit">Send</button>
   </form>
+  <!-- Button trigger modal -->
+  <button type="button" class="btn btn-primary my-3" data-bs-toggle="modal" data-bs-target="#saveParameterModal">
+    Save Parameter Set
+  </button>
 </div>
 
 
