--- a/views/persona/savedPrompt.ejs
+++ b/views/persona/savedPrompt.ejs
@@ -21,7 +21,7 @@
         <div class="accordion-body">
           <p><%- savedPromptParameter[i].description %></p>
           <p><%- savedPromptParameter[i].date %></p>
-          <form action="/persona/chat" method="post"></form>
+          <form action="/persona/chat/preset-prompt" method="post">
           <% for (var j=0; j<savedPromptParameter[i].parameterSet.length; j++) { %>
           <div class="mb-3">
             <label class="card-title"><%- savedPromptParameter[i].parameterSet[j] %></label><br>
