--- a/views/saved/saved-persona.ejs
+++ b/views/saved/saved-persona.ejs
@@ -8,11 +8,11 @@
   <h1 class="align-middle">SAVED PERSONA</h1>
   <form id="savePDF" action="/saved/persona/save-as-pdf" method="post">
     <input id=savePDFInput type="hidden" name="personaList" value="" />
-    <button class="btn btn-sm position-absolute top-50 end-0 translate-middle material-icons" id="savePDFButton" disabled>picture_as_pdf</button>
+    <button class="btn btn-sm position-absolute top-50 end-0 translate-middle material-symbols-rounded" id="savePDFButton" disabled>picture_as_pdf</button>
   </form>
   <form id="savePDF" action="/persona/saved-persona/dialogue-filters" method="post">
     <input id=gotoDialogueInput type="hidden" name="personaList" value="" />
-    <button class="btn btn-sm material-icons text-center" id="gotoDialogueButton" disabled>chat</button>
+    <button class="btn btn-sm material-symbols-rounded text-center" id="gotoDialogueButton" disabled>forum</button>
   </form>
 </div>
 </div>
