--- a/views/partials/header-start.ejs
+++ b/views/partials/header-start.ejs
@@ -20,3 +20,6 @@
   <!-- import google icon -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+  <!-- import fontawesome -->
+  <script src="https://kit.fontawesome.com/b0eab3021b.js" crossorigin="anonymous"></script>
