--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -31,12 +31,9 @@
     </form>
     <hr>
     <% } %>
-    <div class="card col-2 d-none" id="loadingCard">
-      <div class="card-body m-3 p-0 text-center">
-        <div class="card-text">
-          <span id="loadingContainer"></span>
-        </div>
-      </div>
+    <div class="p-2 text-center d-none" id="loadingCard">
+      <span id="loadingContainer"><i class="fa-solid fa-cat fa-bounce fa-2xl" style="color: #ffffff;"></i></i></span>
+      <p style="color: #ffffff;">Please watch this cat while we finish generating!</p>
     </div>
   </div>
 </div>
@@ -54,8 +51,6 @@
     const container = document.getElementById('chatContainer');
 
     // Scroll to the bottom of the container
-    // container.scrollTop = container.scrollHeight
-    // container.scrollIntoView(false);
     container.scrollIntoView({
       behavior: 'smooth',
       block: 'end'
@@ -64,20 +59,6 @@
     $('#send').click(function() {
       // show card with loading indicator
       $("#loadingCard").removeClass("d-none");
-
-      // Show the loading indicator when the user clicks send
-      const element = document.getElementById('loadingContainer');
-      element.textContent = ''
-
-      loadInterval = setInterval(() => {
-        // Update the text content of the loading indicator
-        element.textContent += '.';
-
-        // If the loading indicator has reached three dots, reset it
-        if (element.textContent === '....') {
-          element.textContent = '.';
-        }
-      }, 300);
     });
   });
 </script>
